Fixed the Wrap Effect

--- a/src/components/Foodlist.css
+++ b/src/components/Foodlist.css
@@ -12,7 +12,7 @@
 }
 .Card{
   display: flex;
-  width: 40%;
+  width: 650px;
   height: 250px;
   margin-bottom: 35px;
   background-color: #fff;
@@ -22,7 +22,6 @@
 #cardImg{
   width: 300px;
   border-radius: 10px 0 0 10px;
-  margin-right: 15px;
 }
 #delete-btn{
   background: none repeat scroll 0 0 transparent;
